$Id: History,v 1.3 2000-10-25 00:00:48 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
- Oct 24, 00 H.Kurashige(decay-V02-00-01)
-  Bug fix in G4Decay::DecayIt (no decay if the particle is stable)

- Oct 19, 00 H.Kurashige(decay-V02-00-00)
-  Bug fix in G4Decay to avoid direct modification of G4Track
   by the Decay Process

- Mar. 1, 00 H.Kurashige (decay-V01-00-00)
-  Bug fix in G4Decay::IsApplicable()
      G4Decay should be applicable to "shortlived" particles  