@@ -1,4 +1,4 @@
-$Id: History,v 1.3 2000-10-25 00:00:48 kurasige Exp $
+$Id: History,v 1.4 2001-01-18 19:52:35 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+- Jan 18, 01 H.Kurashige(decay-V03-00-01)
+-  Use PreAssignedDecayTime in G4DynamicParticle if necessary
+
 - Oct 24, 00 H.Kurashige(decay-V02-00-01)
 -  Bug fix in G4Decay::DecayIt (no decay if the particle is stable)
 
